--- a/bibliography.bib
+++ b/bibliography.bib
@@ -194,7 +194,9 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@misc{gelman_int, title={Statistical Modeling, Causal Inference, and Social Science}, url={https://statmodeling.stat.columbia.edu/2018/03/15/need-16-times-sample-size-estimate-interaction-estimate-main-effect/}, journal={Statistical Modeling, Causal Inference, and Social Science:}, author={Gelman, Andrew}}
+@misc{gelman_int, title={Statistical Modeling, Causal Inference, and Social Science}, url={https://statmodeling.stat.columbia.edu/2018/03/15/need-16-times-sample-size-estimate-interaction-estimate-main-effect/}, journal={Statistical Modeling, Causal Inference, and Social Science:}, author={Gelman, Andrew},
+year = "2018",
+month = "March"}
 
 @article{Holm_Bonferroni,
  ISSN = {03036898, 14679469},
